--- a/README
+++ b/README
@@ -6,7 +6,7 @@ Feel free to send pull requests, or to take over this project.
 
 License
 =======
-
+MIT License
 Copyright (C) 2011, Daniel Ramirez <hello@danielrmz.com>
 
 Permission is hereby granted, free of charge, to any person obtaining a copy of
